<resources>
    <string name="app_name">Unit9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Remove">Remove</string>
    <string name="Email">Email</string>
    <string name="SMS">SMS</string>
    <string name="Settings">Settings</string>
    <string name="Add">Add</string>
    <string name="Communicate">Communicate</string>
    <string name="Share">Share</string>
    <string name="Send">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
