<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@mipmap/ic_add_round"
            android:title="@string/Add" />
        <item
            android:id="@+id/nav_remove"
            android:icon="@mipmap/minus_round"
            android:title="@string/Remove" />
        <item
            android:id="@+id/nav_email"
            android:icon="@mipmap/email"
            android:title="@string/Email" />
        <item
            android:id="@+id/nav_SMS"
            android:icon="@mipmap/text"
            android:title="@string/SMS" />
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Settings" />
    </group>

    <item android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/Send" />
        </menu>
    </item>

</menu>
